docs(notes): M1 JVM 附录与全文验收